--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div id="prestige" style="display: none; margin: 50px; padding: 20px; border: 3px;">
-        You can now destory all your yezs to summon the yes from the outer world! <br> <button onclick="prestige()" style="background-color: red;"> Summon yes</button> <br> 
+        You can now destory all your yezs to summon the yes from the outer world! <br> <button onclick="prestige()" id="pb1" style="background-color: red; display: none;"> Summon yes</button> <br> 
 
        <div style="border: 3px; margin: auto; padding: 0px; font-size: 20px; color: red;"> You will gain : <span id="yesg"> 0</span> yes </div>
         <div id="yesupgrades" style="display:none;  border: 15px solid red; padding: 50px; margin: 20px;"> 
